[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
num = "0.4"
nom = "7"
meval = "0.2"
num-bigint = "0.4.3"
priority-queue = "1.3.0"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.5"
crossterm = "0.23"
smallvec = "1.10.0"
static_init = "1.0.3"